[gd_scene load_steps=9 format=3 uid="uid://doe7wryx4acnb"]

[ext_resource type="Script" uid="uid://cf34ph7ujqlal" path="res://Scripts/main_window.gd" id="1_6t6yy"]
[ext_resource type="Texture2D" uid="uid://crfv8uyc2jumf" path="res://Assets/Images/x-mark-24.png" id="2_w45st"]
[ext_resource type="PackedScene" uid="uid://b0yhbb4kywbls" path="res://Scenes/clock_screen.tscn" id="5_qdbfq"]
[ext_resource type="Texture2D" uid="uid://dohubpls5rx2l" path="res://Assets/Images/icons8-move-50.png" id="6_0s767"]
[ext_resource type="Texture2D" uid="uid://cxgqgjeme710l" path="res://Assets/Images/IX-SVG.svg" id="7_kglov"]
[ext_resource type="Texture2D" uid="uid://dvhxa2xgujwes" path="res://Assets/Images/right.svg" id="7_p20v8"]
[ext_resource type="Texture2D" uid="uid://xsheoeofap12" path="res://Assets/Images/icons8-gear-32.png" id="8_p20v8"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1cwwx"]
bg_color = Color(0, 0, 0, 0.6039216)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[node name="MainWindow" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6t6yy")

[node name="Background" type="Panel" parent="."]
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 440.0
offset_bottom = 248.0
theme_override_styles/panel = SubResource("StyleBoxFlat_1cwwx")

[node name="ClockScreen" parent="." instance=ExtResource("5_qdbfq")]
layout_mode = 1

[node name="CloseButton" type="TextureButton" parent="."]
self_modulate = Color(0.8980392, 0.8901961, 0.8117647, 1)
layout_mode = 0
offset_left = 48.0
offset_top = 48.0
offset_right = 87.78198
offset_bottom = 87.789474
rotation = 3.1415927
texture_normal = ExtResource("2_w45st")

[node name="DragButton" type="TextureButton" parent="."]
self_modulate = Color(0.8980392, 0.8901961, 0.8117647, 1)
layout_mode = 0
offset_left = 64.0
offset_top = 16.0
offset_right = 114.0
offset_bottom = 66.0
texture_normal = ExtResource("6_0s767")

[node name="IxSvg" type="Sprite2D" parent="."]
self_modulate = Color(0.8980392, 0.8901961, 0.8117647, 1)
position = Vector2(316, 24.000004)
rotation = 0.2617994
scale = Vector2(0.019999998, 0.019999998)
texture = ExtResource("7_kglov")

[node name="SettingsButton" type="TextureButton" parent="."]
self_modulate = Color(0.8980392, 0.8901961, 0.8117647, 1)
layout_mode = 0
offset_left = 400.0
offset_top = 48.0
offset_right = 440.0
offset_bottom = 88.0
rotation = -1.5707964
texture_normal = ExtResource("8_p20v8")

[node name="ShardButton" type="TextureButton" parent="."]
self_modulate = Color(0.8980392, 0.8901961, 0.8117647, 1)
layout_mode = 0
offset_left = 384.0
offset_top = 104.0
offset_right = 432.0
offset_bottom = 152.0
texture_normal = ExtResource("7_p20v8")

[connection signal="pressed" from="CloseButton" to="." method="_on_close_button_pressed"]
[connection signal="button_down" from="DragButton" to="." method="_on_drag_button_button_down"]
[connection signal="button_up" from="DragButton" to="." method="_on_drag_button_button_up"]
[connection signal="pressed" from="SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="ShardButton" to="." method="_on_shard_button_pressed"]
